--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.16.0",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1"
