--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.1",
+    "helmet": "^8.1.0",
     "mongoose": "^8.16.0",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
